Project/project2/test/test_12012138_1.out
Error type 7 at line 10: binary operation on non-number variables
Error type 5 at line 10: unmatching type on both sides of assignment